--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@ bio:            'Just a simple Jekyll theme'
 description:    "JBlog is a minimal, one column and blue jekyll theme for your blog."
 picture:        'assets/img/profile.png'
 locale:         en_US
-url:            https://alperenbozkurt.github.io/JBlog
-
+url:            https://sureyyaakis.github.io/sureyya.akis/
 
 # Jekyll
 permalink:      /:title/
