--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:          Sureyya B Akis
 bio:            'Just a simple Jekyll theme'
-description:    "JBlog is a minimal, one column and blue jekyll theme for your blog."
+description:    "The page is not complete"
 picture:        'assets/img/profile.png'
 locale:         en_US
 url:            https://sureyyaakis.github.io/sureyya.akis/
