--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ youtube: username
 
 
 # Comments
-disqus_shortname: #alperenbozkurt-net
+disqus_shortname: 
 
 
 # Gems
@@ -68,7 +68,7 @@ gems:
   - jekyll-paginate
 
 jekyll-mentions:
-    base_url: https://github.com
+    base_url: https://sureyyaakis.github.io/sureyya.akis/
 
 # Exclude list
 exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile]
