--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ facebook: username
   #ad-client:
   #ad-slot:
 #bing-verify:
-github: username
+github: https://github.com/sureyyaakis
 stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin: username
 #xing: username
