--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:          Sureyya B Akis
 bio:            'Just a simple Jekyll theme'
 description:    "The page is not finished"
-picture:        'assets/img/sample.png'
+picture:        #'assets/img/sample.png'
 locale:         en_US
 url:            https://sureyyaakis.github.io/sureyya.akis/
 
